# test

test/: CMakeLists.txt
test/app/video/: Makefile  MenuCommond.c  MenuCommond.h  alsa_capture.c  alsa_capture.h  audio_dev.c  audio_dev.h  audioplay.cpp  audioplay.h  camera_ui.c  camera_ui.h  camera_ui_def.h  camera_ui_res_en.h  common.h  cvr_make.sh  encode_handler.cpp  encode_handler.h  gsensor.c  gsensor.h  number.h  parameter.c  parameter.h  settime.c  settime.h  temperature.c  temperature.h  video.cpp  video.h  video_interface.cpp_internal  video_interface.h  video_ion_alloc.c  video_ion_alloc.h  videoplay.c  videoplay.h  vpu.c  vpu.h  watermark.c  watermark.h  watermark_minigui.c  watermark_minigui.h  (+3 more)
test/app/video/av_wrapper/: dispatcher.h  message_queue.h  video_common.cpp  video_common.h
test/app/video/av_wrapper/decoder_demuxing/: decoder_demuxing.cpp  decoder_demuxing.h
test/app/video/av_wrapper/encoder_muxing/: packet_dispatcher.cpp  packet_dispatcher.h
test/app/video/av_wrapper/encoder_muxing/encoder/: aac_encoder.cpp  (+5 more)
test/app/video/av_wrapper/motion_detection/: md_processor.cpp  md_processor.h
test/app/video/customer_interface/: test_interface.c
test/app/video/example/: user.cpp  user.h
test/app/video/res/: ui_1280x720.h  ui_320x240.h  ui_854x480.h  ui_960x540.h
test/app/video/res/res_1280x720/: MiniGUI.cfg
test/app/video/res/res_320x240/: MiniGUI.cfg
test/app/video/res/res_854x480/: MiniGUI.cfg
test/app/video/res/res_960x540/: MiniGUI.cfg
test/app/video/ueventmonitor/: ueventmonitor.c  ueventmonitor.h  usb_sd_ctrl.c  usb_sd_ctrl.h
(+11 files in other folders)
